Fixed overflow and wrapping issue in spacing, lineheight,positioning

--- a/playbook-website/app/javascript/site_styles/_visual_guidelines.scss
+++ b/playbook-website/app/javascript/site_styles/_visual_guidelines.scss
@@ -54,6 +54,9 @@
       //width: 20%;
       background-color: white;
     }
+    .zIndex-card {
+      max-width: 100px;
+    }
     .two-zIndex {
       //width: 20%;
       //transform: translateX(-10px);
